--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="Zk_nnmY1lPEr-1tUKkqTM0nu5_vpYnSnTPZUVqHtkts" />
     <title>Countdown</title>
     <link rel="stylesheet" href="./style/digit.css">
-    <link rel="stylesheet" href="./style/app.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/45h1m/countdown/main/styles/app.css">
 </head>
 
 <body class="">
