--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="ashim das, online countdown, count down, countdown, any date countdown, custom countdown, new year 2024 countdown, new year countdown, happy new year countdown, happy new year, countdown to any date"/>
     <meta name="google-site-verification" content="Zk_nnmY1lPEr-1tUKkqTM0nu5_vpYnSnTPZUVqHtkts" />
     <title>Countdown</title>
-    <link rel="stylesheet" href="./style/digit.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/45h1m/countdown/main/styles/digit.css">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/45h1m/countdown/main/styles/app.css">
 </head>
 
