--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
 
 
-    <script src="./js/main.js"></script>
+    <script src="https://raw.githubusercontent.com/45h1m/countdown/main/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
